Updated Home component with merged bg.jpg background and glowing text animation

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<!-- Placeholder HTML file for Astitva -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Astitva</title>
+</head>
+<body>
+  <div id="root"></div>
+</body>
+</html>
